--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "scripts": {
     "build:ui": "rm -rf dist && cd C:/Users/miika/code/part2-notes-frontend && npm run build && cp -r dist C:/Users/miika/code/part3harjoitukset",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
-    "start": "node index.js",
-    "dev": "node --watch index.js",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "dev": "cross-env NODE_ENV=development node --watch index.js",
     "lint": "eslint .",
-    "test": "node --test"
+    "test": "cross-env  NODE_ENV=test node --test"
   },
   "dependencies": {
+    "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "mongoose": "^9.1.4"
@@ -23,6 +24,7 @@
     "@eslint/js": "^9.39.2",
     "@stylistic/eslint-plugin": "^5.7.1",
     "eslint": "^9.39.2",
-    "globals": "^17.1.0"
+    "globals": "^17.1.0",
+    "supertest": "^7.2.2"
   }
 }
