--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
+    "lint": "^1.1.2",
     "mongoose": "^9.1.4"
   },
   "devDependencies": {
